# thermite2

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
src/: lib.rs  vga.rs  vga_buffer.rs
src/arch/: mod.rs
src/arch/x86_64/: Makefile  boot.asm  linker.ld  long_mode_init.asm  mod.rs  multiboot_header.asm  vga.rs
src/arch/x86_64/boot/grub/: grub.cfg
