[package]
name = "thermite_os"
version = "0.1.2"
authors = ["Stallmanifold <stallmanifold@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0.0"
volatile = { git = "https://github.com/stallmanifold/volatile.git" }
spin = "0.4.5"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"