[package]
name = "thermite_os"
version = "0.1.5"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0.0"
volatile = { git = "https://github.com/lambdaxymox/volatile.git" }
spin = "0.4.5"
# multiboot2 = { git = "https://github.com/stallmanifold/rust-multiboot2.git" }
multiboot2 = { path = "../rust-multiboot2"}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"